# SPM

./: README.md
Assignment/: Cover.tex  Ref.bib  typeinst.aux  typeinst.bbl  typeinst.blg  typeinst.tex  typeinst.toc
HW1_03102017/: Conver_v1  Conver_v2  Convert_Cilk  Convert_Cilk.cpp  Convert_Thread.cpp  Covert_v2  a.out
HW2_10102017/: CreateDic.cpp  Dictionary.txt  Input.txt  a.out
HongTriNguyen_553719/input/: Input100.txt  Input1500.txt
HongTriNguyen_553719/source/: function.cpp  interval_number.cpp  interval_number.h  parallelism_ff_server.cpp  parallelism_thread_server.cpp  sequantialization.cpp  stage.cpp
SPM_Project/: CMakeLists.txt  NoteForProject  readme.txt
SPM_Project/Assignment/: Cover.tex  typeinst.aux  typeinst.tex  typeinst.toc
SPM_Project/build_testing/: CMakeCache.txt  Makefile  cmake_install.cmake  ff_parallelism  parallelism_thread_server  threads_parallelism
SPM_Project/implement/: Note.txt  parallelism_ff.cpp  parallelism_ff_server.cpp  parallelism_normal_thread.cpp  parallelism_thread.cpp  parallelism_thread_server.cpp  sequatialization_Model.cpp
SPM_Project/input/: Input.txt  Output_thread.txt
SPM_Project/source/: Montecarlo.cpp  Montecarlo.h  farmTask.h  function.cpp  function.h  interval_number.cpp  interval_number.h  pipeLine.h  stage.cpp  stage.h  testingFF.cpp  thread_stage.cpp  thread_stage.h
SPM_Project/source/spdlog/: spdlog.h
TriHongNguyen_553719/: CMakeLists.txt  NoteForProject  Output_Seq.txt  Readme.txt  testing.cpp
TriHongNguyen_553719/input/: Input1000.txt  Input2000.txt  Input500.txt  InputTest.txt  createInput.cpp
TriHongNguyen_553719/scriptFolder/: .runThread.py.swp  drawGraph.py  result.txt  resutlt.txt  runThread.py
TriHongNguyen_553719/source/: Montecarlo.cpp  Montecarlo.h  Output_thread.txt  function.cpp  function.h  interval_number.cpp  interval_number.h  parallelism_ff_server.cpp  parallelism_thread_server.cpp  sequantialization.cpp  stage.cpp  stage.h
TriHongNguyen_553719/testing/: .Output_Seq.txt.swp  .Output_ff.txt.swp  .Output_thread.txt.swp  CMakeCache.txt  Makefile  Output_Seq.txt  cmake_install.cmake  draw2graphFolder.py  ff  runThread.py  seq  threads
